finishes memory game route

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,27 +7,22 @@
   padding: 6rem;
   min-height: 100vh;
 }
-.h2{
+/* .h2{
   text-align: center;
   margin: 30px;
   color:#db431d;
   font-size: 30px;
-}
+} */
 
-.text{
+/* .text{
   width: 900px;
   display: flex;
   margin: 0 auto;
   font-size: 20px;
-}
+} */
 
-.btn {
-  background-color: #db431d;
-  padding: 15px;
-  margin: 30px;
-  border: #db431d;
-  border-radius: 5%;
-  justify-content: center;
+
+.avatar{
+  border-radius: 50%;
   
-
 }
