--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -7,4 +7,23 @@
     align-items: center;
     padding: 6rem;
     min-height: 100vh;
+    
   }
+  .images{
+    margin: 20px;
+  }
+  .btn {
+    background-color: #db431d;
+    padding: 15px;
+    margin: 30px;
+    border: #db431d;
+    border-radius: 5%;
+    justify-content: center;
+    
+  
+  }
+  .buttons{
+    display: flex;
+    justify-content: center;
+ }
+  
