--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,9 +7,16 @@
   font-family: 'Poppings'
   
 }
+h1{
+  margin:20px;
+  font-size: 60px;
+  color:#db431d;
+}
 h2{
   
-  font-size: 30px;
+  font-size: 36px;
+  margin: 10px;
+  padding: 10px;
 }
 
 h3{
@@ -18,6 +25,12 @@ h3{
   color:#db431d;
   font-size: 20px;
 }
+a{
+  text-decoration: none;
+  color:#db431d;
+  font-weight: bold;
+}
+
 
 
 
